--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,25 @@
+
+body
+{
+	margin:0;
+}
+#app
+{
+	display: grid;
+	place-items: center;
+
+	background: lightblue;
+	height:100vh;
+}
+
 svg {
-  stroke: 1px solid black;
+  padding: 0.5rem;
+  border-radius: 10px;
+  border: 1px solid red;
+  background: lightpink;
+  font-size: 2rem;
+  text-align: center;
+  height: 80vh;
+  box-shadow:0px 0px 20px 0px rgba(20,10,10,.3);
+  width:80vw;
 }
