--- a/src/style.scss
+++ b/src/style.scss
@@ -12,14 +12,14 @@ body
 	height:100vh;
 }
 
-svg {
+canvas {
   padding: 0.5rem;
   border-radius: 10px;
   border: 1px solid red;
   background: lightpink;
   font-size: 2rem;
   text-align: center;
-  height: 80vh;
+  height: 80vmin;
   box-shadow:0px 0px 20px 0px rgba(20,10,10,.3);
-  width:80vw;
+  width:80vmin;
 }
