--- a/src/style.scss
+++ b/src/style.scss
@@ -1,15 +1,12 @@
-
-body
-{
-	margin:0;
+body {
+  margin: 0;
 }
-#app
-{
-	display: grid;
-	place-items: center;
+#app {
+  display: grid;
+  place-items: center;
 
-	background: lightblue;
-	height:100vh;
+  background: lightblue;
+  height: 100vh;
 }
 
 canvas {
@@ -20,6 +17,6 @@ canvas {
   font-size: 2rem;
   text-align: center;
   height: 80vmin;
-  box-shadow:0px 0px 20px 0px rgba(20,10,10,.3);
-  width:80vmin;
+  box-shadow: 0px 0px 20px 0px rgba(20, 10, 10, 0.3);
+  width: 80vmin;
 }
